--- a/vcard/joshuamckenna/index.html
+++ b/vcard/joshuamckenna/index.html
@@ -655,6 +655,55 @@
       </div>
       <div class="featured">
         <h2 class="section textColor">Photo Portfolio</h2>
+        <div>
+          <div
+            class="lr_embed"
+            style="
+              position: relative;
+              padding-bottom: 50%;
+              height: 0;
+              overflow: hidden;
+            "
+          >
+            <iframe
+              id="iframe"
+              src="https://lightroom.adobe.com/embed/shares/906d7074933c4d41a5071b2641e551ea/slideshow?background_color=%232D2D2D&color=%23999999"
+              frameborder="0"
+              style="
+                width: 100%;
+                height: 100%;
+                position: absolute;
+                top: 0;
+                left: 0;
+              "
+            ></iframe>
+          </div>
+        </div>
+        <div><!----></div>
+        <div>
+          <div
+            class="lr_embed"
+            style="
+              position: relative;
+              padding-bottom: 50%;
+              height: 0;
+              overflow: hidden;
+            "
+          >
+            <iframe
+              id="iframe"
+              src="https://lightroom.adobe.com/embed/shares/993ea67780164e84b080477183a4c024/slideshow?background_color=%232D2D2D&color=%23999999"
+              frameborder="0"
+              style="
+                width: 100%;
+                height: 100%;
+                position: absolute;
+                top: 0;
+                left: 0;
+              "
+            ></iframe>
+          </div>
+        </div>
         <div><!----></div>
       </div>
       <div class="featured">
