Remove irrelevant photo portfolio

--- a/vcard/joshuamckenna/index.html
+++ b/vcard/joshuamckenna/index.html
@@ -654,7 +654,7 @@
         </div>
       </div>
       <div class="featured">
-        <h2 class="section textColor">Photo Portfolio</h2>
+        <h2 class="section textColor">Photos</h2>
         <div>
           <div
             class="lr_embed"
@@ -680,6 +680,9 @@
           </div>
         </div>
         <div><!----></div>
+      </div>
+      <!-- <div class="featured">
+        <h2 class="section textColor">Weddings</h2>
         <div>
           <div
             class="lr_embed"
@@ -704,10 +707,9 @@
             ></iframe>
           </div>
         </div>
-        <div><!----></div>
-      </div>
+      </div> -->
       <div class="featured">
-        <h2 class="section textColor">Video Portfolio</h2>
+        <h2 class="section textColor">Videos</h2>
         <div>
           <div
             class="media embedded"
