--- a/vcard/joshuamckenna/index.html
+++ b/vcard/joshuamckenna/index.html
@@ -94,7 +94,7 @@
       <a id="close" class="closeColor"
         ><div class="icon">
           <svg
-            viewBox="0 0 24 24"
+            viewBox="0 0 20 20"
             xmlns="http://www.w3.org/2000/svg"
             xml:space="preserve"
             style="
@@ -128,7 +128,7 @@
           style="background-color: rgb(65, 126, 155)"
           ><div class="icon iconColor">
             <svg
-              viewBox="0 0 24 24"
+              viewBox="0 0 20 20"
               xmlns="http://www.w3.org/2000/svg"
               xml:space="preserve"
               style="
@@ -159,7 +159,7 @@
         <button id="copyURL" style="background-color: rgb(65, 126, 155)">
           <div class="icon iconColor">
             <svg
-              viewBox="0 0 24 24"
+              viewBox="0 0 20 20"
               xmlns="http://www.w3.org/2000/svg"
               xml:space="preserve"
               style="
@@ -201,7 +201,7 @@
           <a id="share"
             ><div class="icon topAction">
               <svg
-                viewBox="0 0 24 24"
+                viewBox="0 0 20 20"
                 xmlns="http://www.w3.org/2000/svg"
                 xml:space="preserve"
                 style="
@@ -244,7 +244,7 @@
           <a id="showQR"
             ><div class="icon topAction">
               <svg
-                viewBox="0 0 24 24"
+                viewBox="0 0 20 20"
                 xmlns="http://www.w3.org/2000/svg"
                 xml:space="preserve"
                 style="
@@ -307,10 +307,10 @@
         download=""
         target="_blank"
         aria-label="Save Contact"
-        style="background-color: rgb(65, 126, 155)"
+        style="border: solid 1px #417e9b"
         ><div class="icon iconColor">
           <svg
-            viewBox="0 0 24 24"
+            viewBox="0 0 20 20"
             xmlns="http://www.w3.org/2000/svg"
             xml:space="preserve"
             style="
@@ -359,7 +359,7 @@
               style="background-color: rgb(65, 126, 155)"
               ><div class="icon iconColor">
                 <svg
-                  viewBox="0 0 24 24"
+                  viewBox="0 0 20 20"
                   xmlns="http://www.w3.org/2000/svg"
                   xml:space="preserve"
                   style="
@@ -391,7 +391,7 @@
               style="background-color: rgb(65, 126, 155)"
               ><div class="icon iconColor">
                 <svg
-                  viewBox="0 0 24 24"
+                  viewBox="0 0 20 20"
                   xmlns="http://www.w3.org/2000/svg"
                   xml:space="preserve"
                   style="
@@ -438,7 +438,7 @@
               style="background-color: rgb(65, 126, 155)"
               ><div class="icon iconColor">
                 <svg
-                  viewBox="0 0 24 24"
+                  viewBox="0 0 20 20"
                   xmlns="http://www.w3.org/2000/svg"
                   xml:space="preserve"
                   style="
@@ -470,7 +470,7 @@
               href="https://jmckennaphoto.com"
               ><div class="icon iconColor">
                 <svg
-                  viewBox="0 0 24 24"
+                  viewBox="0 0 20 20"
                   xmlns="http://www.w3.org/2000/svg"
                   xml:space="preserve"
                   style="
@@ -526,7 +526,7 @@
               href="mailto:josh@mckennafam.com"
               ><div class="icon iconColor">
                 <svg
-                  viewBox="0 0 24 24"
+                  viewBox="0 0 20 20"
                   xmlns="http://www.w3.org/2000/svg"
                   xml:space="preserve"
                   style="
@@ -568,7 +568,7 @@
               href="https://calendar.app.google/dVCkYcrch7U8vVDPA"
               ><div class="icon iconColor">
                 <svg
-                  viewBox="0 0 24 24"
+                  viewBox="0 0 20 20"
                   xmlns="http://www.w3.org/2000/svg"
                   xml:space="preserve"
                   style="
@@ -613,7 +613,7 @@
               target="_blank"
               rel="noopener noreferrer"
               aria-label="GitHub"
-              style="background: rgb(51, 51, 51)"
+              style="background: #404040"
               href="https://github.com/ag14spirit"
               ><div class="icon">
                 <svg
@@ -638,12 +638,12 @@
               target="_blank"
               rel="noopener noreferrer"
               aria-label="LinkedIn"
-              style="background: rgb(0, 119, 181)"
+              style="background: #404040"
               ><div class="icon">
                 <svg
                   xmlns="http://www.w3.org/2000/svg"
                   fill="#fff"
-                  viewBox="0 0 24 24"
+                  viewBox="0 0 20 20"
                 >
                   <path
                     d="M20 3H4a1 1 0 0 0-1 1v16a1 1 0 0 0 1 1h16a1 1 0 0 0 1-1V4a1 1 0 0 0-1-1zM8.339 18.337H5.667v-8.59h2.672v8.59zM7.003 8.574a1.548 1.548 0 1 1 0-3.096 1.548 1.548 0 0 1 0 3.096zm11.335 9.763h-2.669V14.16c0-.996-.018-2.277-1.388-2.277-1.39 0-1.601 1.086-1.601 2.207v4.248h-2.667v-8.59h2.56v1.174h.037c.355-.675 1.227-1.387 2.524-1.387 2.704 0 3.203 1.778 3.203 4.092v4.71z"
