Correct viewbox scale & stage for favicon addition

--- a/vcard/joshuamckenna/index.html
+++ b/vcard/joshuamckenna/index.html
@@ -28,6 +28,7 @@
       rel="stylesheet"
     />
     <title>Joshua McKenna's Digital Business Card</title>
+    <!-- <link rel="icon" type="image/x-icon" href="/vcard/favicon.ico" /> -->
     <style>
       #body {
         font-family: sans-serif;
@@ -94,7 +95,7 @@
       <a id="close" class="closeColor"
         ><div class="icon">
           <svg
-            viewBox="0 0 20 20"
+            viewBox="0 0 25 25"
             xmlns="http://www.w3.org/2000/svg"
             xml:space="preserve"
             style="
@@ -128,7 +129,7 @@
           style="background-color: rgb(65, 126, 155)"
           ><div class="icon iconColor">
             <svg
-              viewBox="0 0 20 20"
+              viewBox="0 0 25 25"
               xmlns="http://www.w3.org/2000/svg"
               xml:space="preserve"
               style="
@@ -159,7 +160,7 @@
         <button id="copyURL" style="background-color: rgb(65, 126, 155)">
           <div class="icon iconColor">
             <svg
-              viewBox="0 0 20 20"
+              viewBox="0 0 25 25"
               xmlns="http://www.w3.org/2000/svg"
               xml:space="preserve"
               style="
@@ -201,7 +202,7 @@
           <a id="share"
             ><div class="icon topAction">
               <svg
-                viewBox="0 0 20 20"
+                viewBox="0 0 25 25"
                 xmlns="http://www.w3.org/2000/svg"
                 xml:space="preserve"
                 style="
@@ -244,7 +245,7 @@
           <a id="showQR"
             ><div class="icon topAction">
               <svg
-                viewBox="0 0 20 20"
+                viewBox="0 0 25 25"
                 xmlns="http://www.w3.org/2000/svg"
                 xml:space="preserve"
                 style="
@@ -310,7 +311,7 @@
         style="border: solid 1px #417e9b"
         ><div class="icon iconColor">
           <svg
-            viewBox="0 0 20 20"
+            viewBox="0 0 25 25"
             xmlns="http://www.w3.org/2000/svg"
             xml:space="preserve"
             style="
@@ -359,7 +360,7 @@
               style="background-color: rgb(65, 126, 155)"
               ><div class="icon iconColor">
                 <svg
-                  viewBox="0 0 20 20"
+                  viewBox="0 0 25 25"
                   xmlns="http://www.w3.org/2000/svg"
                   xml:space="preserve"
                   style="
@@ -391,7 +392,7 @@
               style="background-color: rgb(65, 126, 155)"
               ><div class="icon iconColor">
                 <svg
-                  viewBox="0 0 20 20"
+                  viewBox="0 0 25 25"
                   xmlns="http://www.w3.org/2000/svg"
                   xml:space="preserve"
                   style="
@@ -438,7 +439,7 @@
               style="background-color: rgb(65, 126, 155)"
               ><div class="icon iconColor">
                 <svg
-                  viewBox="0 0 20 20"
+                  viewBox="0 0 25 25"
                   xmlns="http://www.w3.org/2000/svg"
                   xml:space="preserve"
                   style="
@@ -470,7 +471,7 @@
               href="https://jmckennaphoto.com"
               ><div class="icon iconColor">
                 <svg
-                  viewBox="0 0 20 20"
+                  viewBox="0 0 25 25"
                   xmlns="http://www.w3.org/2000/svg"
                   xml:space="preserve"
                   style="
@@ -526,7 +527,7 @@
               href="mailto:josh@mckennafam.com"
               ><div class="icon iconColor">
                 <svg
-                  viewBox="0 0 20 20"
+                  viewBox="0 0 25 25"
                   xmlns="http://www.w3.org/2000/svg"
                   xml:space="preserve"
                   style="
@@ -568,7 +569,7 @@
               href="https://calendar.app.google/dVCkYcrch7U8vVDPA"
               ><div class="icon iconColor">
                 <svg
-                  viewBox="0 0 20 20"
+                  viewBox="0 0 25 25"
                   xmlns="http://www.w3.org/2000/svg"
                   xml:space="preserve"
                   style="
@@ -643,7 +644,7 @@
                 <svg
                   xmlns="http://www.w3.org/2000/svg"
                   fill="#fff"
-                  viewBox="0 0 20 20"
+                  viewBox="0 0 25 25"
                 >
                   <path
                     d="M20 3H4a1 1 0 0 0-1 1v16a1 1 0 0 0 1 1h16a1 1 0 0 0 1-1V4a1 1 0 0 0-1-1zM8.339 18.337H5.667v-8.59h2.672v8.59zM7.003 8.574a1.548 1.548 0 1 1 0-3.096 1.548 1.548 0 0 1 0 3.096zm11.335 9.763h-2.669V14.16c0-.996-.018-2.277-1.388-2.277-1.39 0-1.601 1.086-1.601 2.207v4.248h-2.667v-8.59h2.56v1.174h.037c.355-.675 1.227-1.387 2.524-1.387 2.704 0 3.203 1.778 3.203 4.092v4.71z"
