Finished class re-style of contact save button

--- a/vcard/joshuamckenna/index.html
+++ b/vcard/joshuamckenna/index.html
@@ -309,7 +309,7 @@
         target="_blank"
         aria-label="Save Contact"
         style="border: solid 1px #417e9b"
-        ><div class="icon iconColor">
+        ><div class="icon" style="color: #222">
           <svg
             viewBox="0 0 25 25"
             xmlns="http://www.w3.org/2000/svg"
@@ -327,12 +327,12 @@
               cx="8.5"
               cy="7"
               r="4"
-              style="fill: none; stroke: #fff; stroke-width: 2.29px"
+              style="fill: none; stroke: #222; stroke-width: 2.29px"
               transform="matrix(.875 0 0 .875 4.563 -.625)"
             ></circle>
             <path
               d="M86 181c0-3.863 3.137-7 7-7s7 3.137 7 7"
-              style="fill: none; stroke: #fff; stroke-width: 2px"
+              style="fill: none; stroke: #222; stroke-width: 2px"
               transform="translate(-81 -163)"
             ></path>
             <path
@@ -340,14 +340,14 @@
               style="
                 fill: none;
                 fill-rule: nonzero;
-                stroke: #fff;
+                stroke: #222;
                 stroke-width: 2px;
               "
               transform="translate(-92 -152)"
             ></path>
           </svg>
         </div>
-        <p class="iconColor">Save Contact</p></a
+        <p class="" style="color: #417e9b">Save Contact</p></a
       >
       <div class="actions">
         <div class="actionsC">
