Add media embedded classes to lightroom section

--- a/vcard/joshuamckenna/index.html
+++ b/vcard/joshuamckenna/index.html
@@ -658,12 +658,13 @@
         <h2 class="section textColor">Photos</h2>
         <div>
           <div
-            class="lr_embed"
+            class="lr_embed media embedded"
             style="
               position: relative;
               padding-bottom: 50%;
               height: 0;
               overflow: hidden;
+              background-color: rgb(194, 194, 194);
             "
           >
             <iframe
