Propagate button styles throughout page

--- a/vcard/joshuamckenna/index.html
+++ b/vcard/joshuamckenna/index.html
@@ -258,7 +258,7 @@
         download=""
         target="_blank"
         aria-label="Save Contact"
-        style="background-color: rgb(65, 126, 155)"
+        style="border: solid 1px rgb(65, 126, 155)"
         href="joshuamckenna.vcf"
         ><div class="icon iconColor">
           <svg
@@ -278,12 +278,12 @@
               cx="8.5"
               cy="7"
               r="4"
-              style="fill: none; stroke: #fff; stroke-width: 2.29px"
+              style="fill: none; stroke: #417e9b; stroke-width: 2.2px"
               transform="matrix(.875 0 0 .875 4.563 -.625)"
             ></circle>
             <path
               d="M86 181c0-3.863 3.137-7 7-7s7 3.137 7 7"
-              style="fill: none; stroke: #fff; stroke-width: 2px"
+              style="fill: none; stroke: #417e9b; stroke-width: 2px"
               transform="translate(-81 -163)"
             ></path>
             <path
@@ -291,7 +291,7 @@
               style="
                 fill: none;
                 fill-rule: nonzero;
-                stroke: #fff;
+                stroke: #417e9b;
                 stroke-width: 2px;
               "
               transform="translate(-92 -152)"
@@ -308,7 +308,7 @@
               target="_blank"
               rel="noopener noreferrer"
               aria-label="Mobile"
-              style="background-color: rgb(65, 126, 155)"
+              style="border: solid 1px rgb(65, 126, 155)"
               ><div class="icon iconColor">
                 <svg
                   viewBox="0 0 24 24"
@@ -325,7 +325,7 @@
                   <path style="fill: none" d="M0 0h24v24H0z"></path>
                   <path
                     d="M11.5 22a.952.952 0 0 1-1.052.945c-4.358-.544-7.851-4.338-8.379-8.39a.938.938 0 0 1 .936-1.046c.399-.009.847-.009 1.202-.009.388 0 .738.237.882.597l.478 1.196a.95.95 0 0 1-.21 1.025l-.107.107a.951.951 0 0 0-.181 1.091c.495.825 1.59 1.92 2.425 2.396a.927.927 0 0 0 1.066-.177c.05-.02.086-.056.122-.092a.95.95 0 0 1 1.025-.21l1.196.478c.36.144.597.494.597.882V22Z"
-                    style="fill: none; stroke: #fff; stroke-width: 0.95px"
+                    style="fill: none; stroke: #417e9b; stroke-width: 0.95px"
                     transform="translate(-2.21 -26.421) scale(2.10526)"
                   ></path>
                 </svg></div
@@ -340,7 +340,7 @@
               target="_blank"
               rel="noopener noreferrer"
               aria-label="SMS"
-              style="background-color: rgb(65, 126, 155)"
+              style="border: solid 1px rgb(65, 126, 155)"
               ><div class="icon iconColor">
                 <svg
                   viewBox="0 0 24 24"
@@ -357,14 +357,14 @@
                   <path style="fill: none" d="M0 0h24v24H0z"></path>
                   <path
                     d="M75.3 61c.477 0 .935.171 1.273.476.337.305.527.718.527 1.149v8.125c0 .897-.806 1.625-1.8 1.625h-8.975a9.7 9.7 0 0 0-4.992 1.365L60.9 74V62.625c0-.431.19-.844.527-1.149A1.904 1.904 0 0 1 62.7 61h12.6Z"
-                    style="fill: none; stroke: #fff; stroke-width: 1.71px"
+                    style="fill: none; stroke: #417e9b; stroke-width: 1.71px"
                     transform="matrix(1.11111 0 0 1.23077 -64.667 -71.077)"
                   ></path>
                   <path
                     d="M36 13h4"
                     style="
                       fill: none;
-                      stroke: #fff;
+                      stroke: #417e9b;
                       stroke-width: 2px;
                       stroke-linejoin: miter;
                     "
@@ -372,7 +372,7 @@
                   ></path>
                   <path
                     d="M36 9h8"
-                    style="fill: none; stroke: #fff; stroke-width: 2px"
+                    style="fill: none; stroke: #417e9b; stroke-width: 2px"
                     transform="translate(-28)"
                   ></path>
                 </svg></div
@@ -387,7 +387,7 @@
               target="_blank"
               rel="noopener noreferrer"
               aria-label="Email"
-              style="background-color: rgb(65, 126, 155)"
+              style="border: solid 1px rgb(65, 126, 155)"
               ><div class="icon iconColor">
                 <svg
                   viewBox="0 0 24 24"
@@ -404,7 +404,7 @@
                   <path style="fill: none" d="M0 0h24v24H0z"></path>
                   <path
                     d="M22 33.75c0-.966-.896-1.75-2-1.75H4c-1.104 0-2 .784-2 1.75v10.5c0 .966.896 1.75 2 1.75h16c1.104 0 2-.784 2-1.75v-10.5Z"
-                    style="fill: none; stroke: #fff; stroke-width: 1.86px"
+                    style="fill: none; stroke: #417e9b; stroke-width: 1.86px"
                     transform="matrix(1 0 0 1.14286 0 -32.571)"
                   ></path>
                   <path
@@ -412,7 +412,7 @@
                     style="
                       fill: none;
                       fill-rule: nonzero;
-                      stroke: #fff;
+                      stroke: #417e9b;
                       stroke-width: 1.86px;
                     "
                     transform="matrix(1 0 0 1.14286 0 1.952)"
@@ -428,7 +428,7 @@
               target="_blank"
               rel="noopener noreferrer"
               aria-label="Calendar"
-              style="background-color: rgb(65, 126, 155)"
+              style="border: solid 1px rgb(65, 126, 155)"
               href="https://calendar.app.google/dVCkYcrch7U8vVDPA"
               ><div class="icon iconColor">
                 <svg
@@ -446,22 +446,22 @@
                   <path style="fill: none" d="M0 0h24v24H0z"></path>
                   <path
                     d="M19 75.111a2.13 2.13 0 0 0 1.414-.521c.375-.333.586-.785.586-1.257V61.778c0-.472-.211-.924-.586-1.257A2.13 2.13 0 0 0 19 60H5a2.13 2.13 0 0 0-1.414.521A1.683 1.683 0 0 0 3 61.778v11.555c0 .472.211.924.586 1.257A2.13 2.13 0 0 0 5 75.111h14Z"
-                    style="fill: none; stroke: #fff; stroke-width: 1.88px"
+                    style="fill: none; stroke: #417e9b; stroke-width: 1.88px"
                     transform="matrix(1 0 0 1.125 0 -63.5)"
                   ></path>
                   <path
                     d="M76 30v4"
-                    style="fill: none; stroke: #fff; stroke-width: 2px"
+                    style="fill: none; stroke: #417e9b; stroke-width: 2px"
                     transform="translate(-60 -28)"
                   ></path>
                   <path
                     d="M76 30v4"
-                    style="fill: none; stroke: #fff; stroke-width: 2px"
+                    style="fill: none; stroke: #417e9b; stroke-width: 2px"
                     transform="translate(-68 -28)"
                   ></path>
                   <path
                     d="M63 38h10"
-                    style="fill: none; stroke: #fff; stroke-width: 2px"
+                    style="fill: none; stroke: #417e9b; stroke-width: 2px"
                     transform="translate(-56 -28)"
                   ></path>
                 </svg></div
@@ -478,7 +478,7 @@
               target="_blank"
               rel="noopener noreferrer"
               aria-label="Behance"
-              style="background: rgb(23, 105, 255)"
+              style="border: solid 1px rgb(65, 126, 155)"
               ><div class="icon">
                 <svg
                   viewBox="0 0 24 24"
@@ -490,7 +490,7 @@
                 >
                   <path
                     d="M8.303 5.731c.589 0 1.119.051 1.605.155.483.103.895.273 1.243.508.343.235.611.547.804.939.187.387.28.871.28 1.443 0 .62-.14 1.138-.421 1.551-.283.414-.7.753-1.256 1.015.757.219 1.318.602 1.69 1.146.374.549.557 1.206.557 1.976 0 .625-.119 1.162-.358 1.613a3.11 3.11 0 0 1-.974 1.114 4.315 4.315 0 0 1-1.399.64 6.287 6.287 0 0 1-1.609.206H2.5V5.731h5.803zm-.351 4.972c.48 0 .878-.114 1.192-.345.312-.228.463-.604.463-1.119 0-.286-.051-.522-.151-.707a1.114 1.114 0 0 0-.417-.428 1.683 1.683 0 0 0-.597-.215 3.609 3.609 0 0 0-.697-.061H5.21v2.875h2.742zm.151 5.239c.267 0 .521-.023.76-.077.241-.052.455-.136.637-.261.182-.12.332-.283.44-.491.109-.206.162-.475.162-.798 0-.634-.179-1.085-.533-1.358-.355-.27-.831-.404-1.414-.404H5.21v3.39h2.893v-.001zm8.565-.041c.367.358.896.538 1.584.538.493 0 .919-.125 1.278-.373.354-.249.57-.515.653-.79h2.155c-.346 1.072-.871 1.838-1.589 2.299-.709.463-1.572.693-2.58.693-.702 0-1.334-.113-1.9-.337a4.033 4.033 0 0 1-1.439-.958 4.37 4.37 0 0 1-.905-1.485 5.433 5.433 0 0 1-.32-1.899c0-.666.111-1.289.329-1.864a4.376 4.376 0 0 1 .934-1.493c.405-.42.885-.751 1.444-.994a4.634 4.634 0 0 1 1.858-.362c.754 0 1.413.146 1.979.44a3.967 3.967 0 0 1 1.39 1.182c.363.493.622 1.058.783 1.691.161.632.217 1.292.171 1.983h-6.431c.001.704.238 1.371.606 1.729zm2.812-4.681c-.291-.322-.783-.496-1.385-.496-.391 0-.714.065-.974.199a1.97 1.97 0 0 0-.62.491 1.772 1.772 0 0 0-.328.628 2.82 2.82 0 0 0-.111.587h3.982c-.058-.624-.272-1.085-.564-1.409zm-3.918-4.663h4.989v1.215h-4.989V6.557z"
-                    fill="#fff"
+                    fill="#417e9b"
                     fill-rule="nonzero"
                   ></path>
                 </svg></div
@@ -504,7 +504,7 @@
               target="_blank"
               rel="noopener noreferrer"
               aria-label="Spotify"
-              style="background: rgb(30, 215, 96)"
+              style="border: solid 1px rgb(65, 126, 155)"
               ><div class="icon">
                 <svg
                   viewBox="0 0 24 24"
@@ -516,7 +516,7 @@
                 >
                   <path
                     d="M17.916 10.866C14.692 8.951 9.374 8.774 6.298 9.709a.935.935 0 0 1-.544-1.79c3.533-1.072 9.405-.866 13.116 1.338a.935.935 0 0 1-.954 1.609zM17.81 13.7a.78.78 0 0 1-1.072.258c-2.688-1.652-6.786-2.131-9.965-1.166A.78.78 0 1 1 6.32 11.3c3.631-1.102 8.147-.568 11.233 1.329a.778.778 0 0 1 .257 1.071zm-1.223 2.723a.624.624 0 0 1-.858.208c-2.348-1.435-5.303-1.76-8.785-.964a.624.624 0 0 1-.277-1.215c3.809-.871 7.076-.496 9.712 1.115a.623.623 0 0 1 .208.856zM12 2C6.478 2 2 6.477 2 12s4.478 10 10 10c5.523 0 10-4.477 10-10S17.523 2 12 2z"
-                    fill="#fff"
+                    fill="#417e9b"
                     fill-rule="nonzero"
                   ></path>
                 </svg></div
@@ -530,13 +530,13 @@
               target="_blank"
               rel="noopener noreferrer"
               aria-label="GitHub"
-              style="background: rgb(51, 51, 51)"
+              style="border: solid 1px rgb(65, 126, 155)"
               ><div class="icon">
                 <svg
                   xmlns="http://www.w3.org/2000/svg"
                   width="24"
                   height="24"
-                  fill="#fff"
+                  fill="#417e9b"
                 >
                   <path
                     fill-rule="evenodd"
@@ -554,11 +554,11 @@
               target="_blank"
               rel="noopener noreferrer"
               aria-label="LinkedIn"
-              style="background: rgb(0, 119, 181)"
+              style="border: solid 1px rgb(65, 126, 155)"
               ><div class="icon">
                 <svg
                   xmlns="http://www.w3.org/2000/svg"
-                  fill="#fff"
+                  fill="#417e9b"
                   viewBox="0 0 24 24"
                 >
                   <path
