Fix incorrect color because I'm a dunce

--- a/vcard/joshuamckenna/index.html
+++ b/vcard/joshuamckenna/index.html
@@ -255,7 +255,7 @@
               " transform="translate(-92 -152)"></path>
         </svg>
       </div>
-      <p style="color: #fff;">Save Contact</p>
+      <p style="color: #417e9b;">Save Contact</p>
     </a>
     <div class="actions">
       <div class="actionsC">
