--- a/vcard/joshuamckenna/index.html
+++ b/vcard/joshuamckenna/index.html
@@ -375,13 +375,13 @@
       <div class="actionsC">
         <div class="actionBtn secBtn">
           <a href="https://behance.net/jmckennaphoto" target="_blank" rel="noopener noreferrer" aria-label="Behance"
-            style="border: solid 1px rgb(65, 126, 155)">
+            style="border: solid 1px #404040">
             <div class="icon">
               <svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" fill-rule="evenodd" clip-rule="evenodd"
                 stroke-linejoin="round" stroke-miterlimit="2">
                 <path
                   d="M8.303 5.731c.589 0 1.119.051 1.605.155.483.103.895.273 1.243.508.343.235.611.547.804.939.187.387.28.871.28 1.443 0 .62-.14 1.138-.421 1.551-.283.414-.7.753-1.256 1.015.757.219 1.318.602 1.69 1.146.374.549.557 1.206.557 1.976 0 .625-.119 1.162-.358 1.613a3.11 3.11 0 0 1-.974 1.114 4.315 4.315 0 0 1-1.399.64 6.287 6.287 0 0 1-1.609.206H2.5V5.731h5.803zm-.351 4.972c.48 0 .878-.114 1.192-.345.312-.228.463-.604.463-1.119 0-.286-.051-.522-.151-.707a1.114 1.114 0 0 0-.417-.428 1.683 1.683 0 0 0-.597-.215 3.609 3.609 0 0 0-.697-.061H5.21v2.875h2.742zm.151 5.239c.267 0 .521-.023.76-.077.241-.052.455-.136.637-.261.182-.12.332-.283.44-.491.109-.206.162-.475.162-.798 0-.634-.179-1.085-.533-1.358-.355-.27-.831-.404-1.414-.404H5.21v3.39h2.893v-.001zm8.565-.041c.367.358.896.538 1.584.538.493 0 .919-.125 1.278-.373.354-.249.57-.515.653-.79h2.155c-.346 1.072-.871 1.838-1.589 2.299-.709.463-1.572.693-2.58.693-.702 0-1.334-.113-1.9-.337a4.033 4.033 0 0 1-1.439-.958 4.37 4.37 0 0 1-.905-1.485 5.433 5.433 0 0 1-.32-1.899c0-.666.111-1.289.329-1.864a4.376 4.376 0 0 1 .934-1.493c.405-.42.885-.751 1.444-.994a4.634 4.634 0 0 1 1.858-.362c.754 0 1.413.146 1.979.44a3.967 3.967 0 0 1 1.39 1.182c.363.493.622 1.058.783 1.691.161.632.217 1.292.171 1.983h-6.431c.001.704.238 1.371.606 1.729zm2.812-4.681c-.291-.322-.783-.496-1.385-.496-.391 0-.714.065-.974.199a1.97 1.97 0 0 0-.62.491 1.772 1.772 0 0 0-.328.628 2.82 2.82 0 0 0-.111.587h3.982c-.058-.624-.272-1.085-.564-1.409zm-3.918-4.663h4.989v1.215h-4.989V6.557z"
-                  fill="#417e9b" fill-rule="nonzero"></path>
+                  fill="#404040" fill-rule="nonzero"></path>
               </svg>
             </div>
           </a>
@@ -390,13 +390,13 @@
       <div class="actionsC">
         <div class="actionBtn secBtn">
           <a href="https://open.spotify.com/user/1223442712" target="_blank" rel="noopener noreferrer"
-            aria-label="Spotify" style="border: solid 1px rgb(65, 126, 155)">
+            aria-label="Spotify" style="border: solid 1px #404040">
             <div class="icon">
               <svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" fill-rule="evenodd" clip-rule="evenodd"
                 stroke-linejoin="round" stroke-miterlimit="2">
                 <path
                   d="M17.916 10.866C14.692 8.951 9.374 8.774 6.298 9.709a.935.935 0 0 1-.544-1.79c3.533-1.072 9.405-.866 13.116 1.338a.935.935 0 0 1-.954 1.609zM17.81 13.7a.78.78 0 0 1-1.072.258c-2.688-1.652-6.786-2.131-9.965-1.166A.78.78 0 1 1 6.32 11.3c3.631-1.102 8.147-.568 11.233 1.329a.778.778 0 0 1 .257 1.071zm-1.223 2.723a.624.624 0 0 1-.858.208c-2.348-1.435-5.303-1.76-8.785-.964a.624.624 0 0 1-.277-1.215c3.809-.871 7.076-.496 9.712 1.115a.623.623 0 0 1 .208.856zM12 2C6.478 2 2 6.477 2 12s4.478 10 10 10c5.523 0 10-4.477 10-10S17.523 2 12 2z"
-                  fill="#417e9b" fill-rule="nonzero"></path>
+                  fill="#404040" fill-rule="nonzero"></path>
               </svg>
             </div>
           </a>
@@ -405,9 +405,9 @@
       <div class="actionsC">
         <div class="actionBtn secBtn">
           <a href="https://github.com/ag14spirit" target="_blank" rel="noopener noreferrer" aria-label="GitHub"
-            style="border: solid 1px rgb(65, 126, 155)">
+            style="border: solid 1px #404040">
             <div class="icon">
-              <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="#417e9b">
+              <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="#404040">
                 <path fill-rule="evenodd"
                   d="M12.03 2a9.97 9.97 0 0 0-3.16 19.44c.5.09.68-.22.68-.48v-1.7c-2.78.6-3.37-1.34-3.37-1.34-.45-1.15-1.1-1.46-1.1-1.46-.91-.61.06-.6.06-.6 1 .07 1.53 1.03 1.53 1.03.89 1.52 2.33 1.08 2.9.83.1-.65.35-1.09.64-1.34-2.22-.25-4.55-1.1-4.55-4.93 0-1.08.4-1.98 1.03-2.67-.1-.26-.45-1.27.1-2.64 0 0 .83-.27 2.74 1.02a9.58 9.58 0 0 1 5 0c1.9-1.3 2.73-1.02 2.73-1.02.55 1.37.2 2.38.1 2.64.64.7 1.03 1.58 1.03 2.67 0 3.84-2.33 4.68-4.56 4.92.36.31.68.92.68 1.85l-.01 2.74c0 .26.18.57.68.48A9.98 9.98 0 0 0 12.03 2z"
                   clip-rule="evenodd"></path>
@@ -419,9 +419,9 @@
       <div class="actionsC">
         <div class="actionBtn secBtn">
           <a href="https://linkedin.com/in/joshuammckenna" target="_blank" rel="noopener noreferrer"
-            aria-label="LinkedIn" style="border: solid 1px rgb(65, 126, 155)">
+            aria-label="LinkedIn" style="border: solid 1px #404040">
             <div class="icon">
-              <svg xmlns="http://www.w3.org/2000/svg" fill="#417e9b" viewBox="0 0 24 24">
+              <svg xmlns="http://www.w3.org/2000/svg" fill="#404040" viewBox="0 0 24 24">
                 <path
                   d="M20 3H4a1 1 0 0 0-1 1v16a1 1 0 0 0 1 1h16a1 1 0 0 0 1-1V4a1 1 0 0 0-1-1zM8.339 18.337H5.667v-8.59h2.672v8.59zM7.003 8.574a1.548 1.548 0 1 1 0-3.096 1.548 1.548 0 0 1 0 3.096zm11.335 9.763h-2.669V14.16c0-.996-.018-2.277-1.388-2.277-1.39 0-1.601 1.086-1.601 2.207v4.248h-2.667v-8.59h2.56v1.174h.037c.355-.675 1.227-1.387 2.524-1.387 2.704 0 3.203 1.778 3.203 4.092v4.71z">
                 </path>
