Reorder buttons and correct sloppy style syntax

--- a/vcard/joshuamckenna/index.html
+++ b/vcard/joshuamckenna/index.html
@@ -61,15 +61,15 @@
     }
 
     .cardColor {
-      false
+      background-color: #404040;
     }
 
     .textColor {
-      color: #222 !important
+      color: #222 !important;
     }
 
     .seekbarColor {
-      background: #417e9b80 !important
+      background: #417e9b80 !important;
     }
   </style>
   <!---->
@@ -229,8 +229,7 @@
       <p class="bizaddr">College Station, Texas</p>
     </div>
     <p class="sub textColor">
-      Sinner, saved by grace • @gracebibletx project manager • former
-      @tamuvetmed BIMS researcher #peoplelovestories
+      Sinner, saved by grace • @gracebibletx project manager • former @tamuvetmed BIMS researcher #peoplelovestories
     </p>
     <a id="cta" rel="noreferrer" download="" target="_blank" aria-label="Save Contact"
       style="border: solid 1px rgb(65, 126, 155)" href="joshuamckenna.vcf">
@@ -258,6 +257,67 @@
       <p style="color: #417e9b;">Save Contact</p>
     </a>
     <div class="actions">
+      <div class="actionsC">
+        <div class="actionBtn">
+          <a href="mailto:josh@mckennafam.com" target="_blank" rel="noopener noreferrer" aria-label="Email"
+            style="border: solid 1px rgb(65, 126, 155)">
+            <div class="icon iconColor">
+              <svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" xml:space="preserve" style="
+                                fill-rule: evenodd;
+                                clip-rule: evenodd;
+                                stroke-linecap: round;
+                                stroke-linejoin: round;
+                                stroke-miterlimit: 2;
+                              ">
+                <path style="fill: none" d="M0 0h24v24H0z"></path>
+                <path
+                  d="M22 33.75c0-.966-.896-1.75-2-1.75H4c-1.104 0-2 .784-2 1.75v10.5c0 .966.896 1.75 2 1.75h16c1.104 0 2-.784 2-1.75v-10.5Z"
+                  style="fill: none; stroke: #417e9b; stroke-width: 1.86px" transform="matrix(1 0 0 1.14286 0 -32.571)">
+                </path>
+                <path d="m18 7.042-6 2.625-6-2.625" style="
+                                  fill: none;
+                                  fill-rule: nonzero;
+                                  stroke: #417e9b;
+                                  stroke-width: 1.86px;
+                                " transform="matrix(1 0 0 1.14286 0 1.952)"></path>
+              </svg>
+            </div>
+          </a>
+          <p class="textColor">Email</p>
+        </div>
+      </div>
+      <div class="actionsC">
+        <div class="actionBtn">
+          <a target="_blank" rel="noopener noreferrer" aria-label="Calendar" style="border: solid 1px rgb(65, 126, 155)"
+            href="https://calendar.app.google/dVCkYcrch7U8vVDPA">
+            <div class="icon iconColor">
+              <svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" xml:space="preserve" style="
+                                fill-rule: evenodd;
+                                clip-rule: evenodd;
+                                stroke-linecap: round;
+                                stroke-linejoin: round;
+                                stroke-miterlimit: 2;
+                              ">
+                <path style="fill: none" d="M0 0h24v24H0z"></path>
+                <path
+                  d="M19 75.111a2.13 2.13 0 0 0 1.414-.521c.375-.333.586-.785.586-1.257V61.778c0-.472-.211-.924-.586-1.257A2.13 2.13 0 0 0 19 60H5a2.13 2.13 0 0 0-1.414.521A1.683 1.683 0 0 0 3 61.778v11.555c0 .472.211.924.586 1.257A2.13 2.13 0 0 0 5 75.111h14Z"
+                  style="fill: none; stroke: #417e9b; stroke-width: 1.88px" transform="matrix(1 0 0 1.125 0 -63.5)">
+                </path>
+                <path d="M76 30v4" style="fill: none; stroke: #417e9b; stroke-width: 2px"
+                  transform="translate(-60 -28)">
+                </path>
+                <path d="M76 30v4" style="fill: none; stroke: #417e9b; stroke-width: 2px"
+                  transform="translate(-68 -28)">
+                </path>
+                <path d="M63 38h10" style="fill: none; stroke: #417e9b; stroke-width: 2px"
+                  transform="translate(-56 -28)">
+                </path>
+              </svg>
+            </div>
+          </a>
+          <p class="textColor">Calendar</p>
+        </div>
+      </div>
       <div class="actionsC">
         <div class="actionBtn">
           <a href="tel:+1 713 705 8482" target="_blank" rel="noopener noreferrer" aria-label="Mobile"
@@ -310,64 +370,6 @@
             </div>
           </a>
           <p class="textColor">SMS</p>
-        </div>
-      </div>
-      <div class="actionsC">
-        <div class="actionBtn">
-          <a href="mailto:josh@mckennafam.com" target="_blank" rel="noopener noreferrer" aria-label="Email"
-            style="border: solid 1px rgb(65, 126, 155)">
-            <div class="icon iconColor">
-              <svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" xml:space="preserve" style="
-                    fill-rule: evenodd;
-                    clip-rule: evenodd;
-                    stroke-linecap: round;
-                    stroke-linejoin: round;
-                    stroke-miterlimit: 2;
-                  ">
-                <path style="fill: none" d="M0 0h24v24H0z"></path>
-                <path
-                  d="M22 33.75c0-.966-.896-1.75-2-1.75H4c-1.104 0-2 .784-2 1.75v10.5c0 .966.896 1.75 2 1.75h16c1.104 0 2-.784 2-1.75v-10.5Z"
-                  style="fill: none; stroke: #417e9b; stroke-width: 1.86px" transform="matrix(1 0 0 1.14286 0 -32.571)">
-                </path>
-                <path d="m18 7.042-6 2.625-6-2.625" style="
-                      fill: none;
-                      fill-rule: nonzero;
-                      stroke: #417e9b;
-                      stroke-width: 1.86px;
-                    " transform="matrix(1 0 0 1.14286 0 1.952)"></path>
-              </svg>
-            </div>
-          </a>
-          <p class="textColor">Email</p>
-        </div>
-      </div>
-      <div class="actionsC">
-        <div class="actionBtn">
-          <a target="_blank" rel="noopener noreferrer" aria-label="Calendar" style="border: solid 1px rgb(65, 126, 155)"
-            href="https://calendar.app.google/dVCkYcrch7U8vVDPA">
-            <div class="icon iconColor">
-              <svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" xml:space="preserve" style="
-                    fill-rule: evenodd;
-                    clip-rule: evenodd;
-                    stroke-linecap: round;
-                    stroke-linejoin: round;
-                    stroke-miterlimit: 2;
-                  ">
-                <path style="fill: none" d="M0 0h24v24H0z"></path>
-                <path
-                  d="M19 75.111a2.13 2.13 0 0 0 1.414-.521c.375-.333.586-.785.586-1.257V61.778c0-.472-.211-.924-.586-1.257A2.13 2.13 0 0 0 19 60H5a2.13 2.13 0 0 0-1.414.521A1.683 1.683 0 0 0 3 61.778v11.555c0 .472.211.924.586 1.257A2.13 2.13 0 0 0 5 75.111h14Z"
-                  style="fill: none; stroke: #417e9b; stroke-width: 1.88px" transform="matrix(1 0 0 1.125 0 -63.5)">
-                </path>
-                <path d="M76 30v4" style="fill: none; stroke: #417e9b; stroke-width: 2px"
-                  transform="translate(-60 -28)"></path>
-                <path d="M76 30v4" style="fill: none; stroke: #417e9b; stroke-width: 2px"
-                  transform="translate(-68 -28)"></path>
-                <path d="M63 38h10" style="fill: none; stroke: #417e9b; stroke-width: 2px"
-                  transform="translate(-56 -28)"></path>
-              </svg>
-            </div>
-          </a>
-          <p class="textColor">Calendar</p>
         </div>
       </div>
     </div>
@@ -470,11 +472,9 @@
           <div class="controls cardColor prodInfo">
             <p class="title">Anderson campus renovation</p>
             <p class="sub">
-              This project aimed to address the aging infrastructure of our
-              auditorium, ensuring continued functionality of architectural
-              house lights. We also upgraded the loudspeaker system and
-              acoustics, and replaced projectors that had exceeded their
-              expected service life.
+              This project aimed to address the aging infrastructure of our auditorium, ensuring continued functionality
+              of architectural house lights. We also upgraded the loudspeaker system and acoustics, and replaced
+              projectors that had exceeded their expected service life.
             </p>
             <p class="price">$1,000,000</p>
             <!---->
@@ -487,14 +487,11 @@
           <div class="controls cardColor prodInfo">
             <p class="title">Grace One Stop</p>
             <p class="sub">
-              Grace Bible Church has a simple mission: to help people find and
-              follow Jesus! At times, however, being a multi-site organization
-              with more than 100 staff members can make things feel…more
-              complicated. This resource attempts to clarify who we are and
-              how we work to empower our teams for action. Much as our culture
-              lives and breathes with the growth God has blessed our church to
-              experience, the contents of this wiki-style document will grow
-              with us.
+              Grace Bible Church has a simple mission: to help people find and follow Jesus! At times, however, being a
+              multi-site organization with more than 100 staff members can make things feel…more complicated. This
+              resource attempts to clarify who we are and how we work to empower our teams for action. Much as our
+              culture lives and breathes with the growth God has blessed our church to experience, the contents of this
+              wiki-style document will grow with us.
             </p>
             <p class="price">$0</p>
             <a target="_blank" href="https://grace-bible.notion.site/" class="label"
