Add CSS animations for buttons

--- a/vcard/joshuamckenna/index.html
+++ b/vcard/joshuamckenna/index.html
@@ -219,7 +219,7 @@
       <!---->
     </div>
   </header>
-  <main style="background-color: rgb(255, 255, 255); margin-top: 0px">
+  <main style="background-color: rgb(255, 255, 255); margin-top: 0px;">
     <img id="profilePhoto" src="./photo.jpeg" alt="Photo" />
     <div id="info" class="textColor">
       <p class="name">Joshua McKenna</p>
@@ -231,8 +231,7 @@
     <p class="sub textColor">
       Sinner, saved by grace • @gracebibletx project manager • former @tamuvetmed BIMS researcher #peoplelovestories
     </p>
-    <a id="cta" rel="noreferrer" download="" target="_blank" aria-label="Save Contact"
-      style="border: solid 1px rgb(65, 126, 155)" href="joshuamckenna.vcf">
+    <a id="cta" rel="noreferrer" download="" target="_blank" aria-label="Save Contact" href="joshuamckenna.vcf">
       <div class="icon iconColor">
         <svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" xml:space="preserve" style="
               fill-rule: evenodd;
@@ -494,8 +493,7 @@
               wiki-style document will grow with us.
             </p>
             <p class="price">$0</p>
-            <a target="_blank" href="https://grace-bible.notion.site/" class="label"
-              style="background-color: rgb(65, 126, 155); line-height: 1.5rem">
+            <a target="_blank" href="https://grace-bible.notion.site/" class="label">
               <p class="iconColor">One Stop</p>
             </a>
           </div>
