Add texture to page background

--- a/vcard/joshuamckenna/index.html
+++ b/vcard/joshuamckenna/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" style="background-color: rgb(194, 194, 194)">
+<html lang="en" style="background-color: #c2c2c2;">
 
 <head>
   <meta charset="UTF-8" />
