Adjust language around Grace Bible work

--- a/vcard/joshuamckenna/index.html
+++ b/vcard/joshuamckenna/index.html
@@ -477,6 +477,9 @@
               projectors that had exceeded their expected service life.
             </p>
             <!---->
+            <a target="_blank" href="https://www.grace-bible.org/campus/anderson" class="label">
+              <p class="iconColor">Visit Grace</p>
+            </a>
           </div>
         </div>
       </div>
@@ -490,10 +493,10 @@
               multi-site organization with more than 100 staff members can make things feel…more complicated. This
               resource attempts to clarify who we are and how we work to empower our teams for action. Much as our
               culture lives and breathes with the growth God has blessed our church to experience, the contents of this
-              wiki-style document will grow with us.
+              wiki-style Staff Culture Handbook will grow with us.
             </p>
             <a target="_blank" href="https://grace-bible.notion.site/" class="label">
-              <p class="iconColor">One Stop</p>
+              <p class="iconColor">See the Wiki</p>
             </a>
           </div>
         </div>
