Prefer hex codes over rgb

--- a/vcard/joshuamckenna/index.html
+++ b/vcard/joshuamckenna/index.html
@@ -83,7 +83,7 @@
 
 <body id="body">
   <div id="modal" style="
-        background-color: rgb(255, 255, 255);
+    background-color: #fff;
         visibility: hidden;
         top: 2rem;
         opacity: 0;
@@ -109,8 +109,8 @@
     </a>
     <div id="keyView">
       <p class="textColor">Use my public key to send me encrypted messages</p>
-      <a download="" target="_blank" id="dlKey" rel="noreferrer" tabindex="-1"
-        style="background-color: rgb(65, 126, 155)" href="./Joshua McKenna's public key.asc">
+      <a download="" target="_blank" id="dlKey" rel="noreferrer" tabindex="-1" style="background-color: #417e9b"
+        href="./Joshua McKenna's public key.asc">
         <div class="icon iconColor">
           <svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" xml:space="preserve" style="
                 fill-rule: evenodd;
@@ -133,7 +133,7 @@
     </div>
     <div id="copyView">
       <p class="textColor">Copy and send the URL to share my Business Card</p>
-      <button id="copyURL" style="background-color: rgb(65, 126, 155)">
+      <button id="copyURL" style="background-color: #417e9b">
         <div class="icon iconColor">
           <svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" xml:space="preserve" style="
                 fill-rule: evenodd;
@@ -216,7 +216,7 @@
     </div>
 
   </header>
-  <main style="background-color: rgb(255, 255, 255); margin-top: 0px;">
+  <main style="background-color: #fff; margin-top: 0px;">
     <div class="headerImgC">
       <img id="cover" src="./cover.jpeg" alt="Background Pattern" />
       <!---->
@@ -260,7 +260,7 @@
       <div class="actionsC">
         <div class="actionBtn">
           <a href="mailto:josh@mckennafam.com" target="_blank" rel="noopener noreferrer" aria-label="Email"
-            style="border: solid 1px rgb(65, 126, 155)">
+            style="border: solid 1px #417e9b">
             <div class="icon iconColor">
               <svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" xml:space="preserve" style="
                                 fill-rule: evenodd;
@@ -288,7 +288,7 @@
       </div>
       <div class="actionsC">
         <div class="actionBtn">
-          <a target="_blank" rel="noopener noreferrer" aria-label="Calendar" style="border: solid 1px rgb(65, 126, 155)"
+          <a target="_blank" rel="noopener noreferrer" aria-label="Calendar" style="border: solid 1px #417e9b"
             href="https://calendar.app.google/dVCkYcrch7U8vVDPA">
             <div class="icon iconColor">
               <svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" xml:space="preserve" style="
@@ -321,7 +321,7 @@
       <div class="actionsC">
         <div class="actionBtn">
           <a href="tel:+1 713 705 8482" target="_blank" rel="noopener noreferrer" aria-label="Mobile"
-            style="border: solid 1px rgb(65, 126, 155)">
+            style="border: solid 1px #417e9b">
             <div class="icon iconColor">
               <svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" xml:space="preserve" style="
                     fill-rule: evenodd;
@@ -344,7 +344,7 @@
       <div class="actionsC">
         <div class="actionBtn">
           <a href="sms:+1 713 705 8482" target="_blank" rel="noopener noreferrer" aria-label="SMS"
-            style="border: solid 1px rgb(65, 126, 155)">
+            style="border: solid 1px #417e9b">
             <div class="icon iconColor">
               <svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" xml:space="preserve" style="
                     fill-rule: evenodd;
@@ -467,7 +467,7 @@
     <div class="featured">
       <h2 class="section textColor">Grace Bible Church</h2>
       <div>
-        <div class="media" style="background-color: rgb(64, 64, 64)">
+        <div class="media" style="background-color: #404040">
           <img src="./media/54133667994_04f524ff29_o.jpeg" alt="Product image" />
           <div class="controls cardColor prodInfo">
             <p class="title">Anderson campus renovation</p>
@@ -484,7 +484,7 @@
         </div>
       </div>
       <div>
-        <div class="media" style="background-color: rgb(64, 64, 64)">
+        <div class="media" style="background-color: #404040">
           <img src="./media/frame_generic_light.png" alt="Product image" />
           <div class="controls cardColor prodInfo">
             <p class="title">Grace One Stop</p>
@@ -503,7 +503,7 @@
       </div>
     </div>
   </main>
-  <footer class="textColor" style="background-color: rgb(255, 255, 255)">
+  <footer class="textColor" style="background-color: #fff">
     Created with
     <a href="https://enbizcard.vishnuraghav.com/" target="_blank" rel="noopener noreferrer"
       class="textColor">EnBizCard</a>
