Update personal information and links in digital business card

--- a/vcard/joshuamckenna/index.html
+++ b/vcard/joshuamckenna/index.html
@@ -221,12 +221,12 @@
     <img id="profilePhoto" src="./photo.jpeg" alt="Photo" />
     <div id="info" class="textColor">
       <p class="name">Joshua McKenna</p>
-      <p class="jobtitle">Operations Executive Manager</p>
-      <p class="bizname">Grace Bible Church</p>
-      <p class="bizaddr">College Station, Texas</p>
+      <p class="jobtitle">Project Manager</p>
+      <p class="bizname">MediaMerge</p>
+      <p class="bizaddr">Birmingham, Alabama</p>
     </div>
     <p class="sub textColor">
-      Sinner, saved by grace • @gracebibletx project manager • former @tamuvetmed BIMS researcher #peoplelovestories
+      Sinner, saved by grace • @mediamerge project manager • formerly of @gracebibletx @tamuvetmed #peoplelovestories
     </p>
     <a id="cta" rel="noreferrer" download="" target="_blank" aria-label="Save Contact" href="joshuamckenna.vcf">
       <div class="icon iconColor">
@@ -285,7 +285,7 @@
       <div class="actionsC">
         <div class="actionBtn">
           <a target="_blank" rel="noopener noreferrer" aria-label="Calendar" style="border: solid 1px #417e9b"
-            href="https://calendar.app.google/dVCkYcrch7U8vVDPA">
+            href="https://calendar.notion.so/meet/joshmckenna/30m-personal">
             <div class="icon iconColor">
               <svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" xml:space="preserve" style="
                                 fill-rule: evenodd;
